# rocket-lab

./: Cargo.toml  README.md
src/: error_handler.rs  main.rs
src/database/redis/: sessions.rs
src/routes/: index.rs  mod.rs  session.rs
src/tracing/: mod.rs
src/user/: mod.rs  user.rs
static/css/: style.css
templates/: 404.html.tera  500.html.tera  base.html.tera  index.html.tera  login.html.tera  nav.html.tera
