[package]
name = "rocket-lab"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = {version="0.5.0-rc.2", features = ["secrets"]}
redis = "0.22.1"
urlencoding = "2.1.2"
dotenvy = "0.15.6"
# tracing = { git = "https://github.com/tokio-rs/tracing.git", branch = "master" }
tracing = { path = "../../tracing/tracing" }
tracing-attributes = {path="../../tracing/tracing-attributes"}
tracing-subscriber = {path="../../tracing/tracing-subscriber", features=[ "ansi", "env-filter"]}
tracing-appender = {path="../../tracing/tracing-appender"}

[dependencies.rocket_dyn_templates]
version="0.1.0-rc.2"
features=["tera"]

[dependencies.rocket_db_pools]
version = "0.1.0-rc.2"
features = ["deadpool_redis", "sqlx_postgres"]

[dependencies.uuid]
version = "1.2.2"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]
